--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mathjax2": "^0.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
+  "homepage": "https://quentinv72.github.io",
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
